Feat(study): Add endpoint to retrieve study programs
