# docs/swagger.json
@@ -330,6 +330,41 @@
                 }
             }
         },
+        "/study/programs": {
+            "get": {
+                "description": "Get study programs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Study"
+                ],
+                "summary": "Get study programs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.Response-array_github_com_savioruz_smrv2-api_internal_dao_model_StudyProgram"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/user/schedules": {
             "get": {
                 "security": [
@@ -499,6 +534,23 @@
                 }
             }
         },
+        "github_com_savioruz_smrv2-api_internal_dao_model.Response-array_github_com_savioruz_smrv2-api_internal_dao_model_StudyProgram": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.StudyProgram"
+                    }
+                },
+                "error": {
+                    "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.ErrorResponse"
+                },
+                "paging": {
+                    "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.Paging"
+                }
+            }
+        },
         "github_com_savioruz_smrv2-api_internal_dao_model.Response-array_github_com_savioruz_smrv2-api_internal_dao_model_UserSchedulesResponse": {
             "type": "object",
             "properties": {
@@ -527,6 +579,17 @@
                 },
                 "paging": {
                     "$ref": "#/definitions/github_com_savioruz_smrv2-api_internal_dao_model.Paging"
+                }
+            }
+        },
+        "github_com_savioruz_smrv2-api_internal_dao_model.StudyProgram": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
